# trakt-tools

./: .flake8  AUTHORS  CHANGES.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: publish.yml  test.yml
tests/: requirements.txt
trakt_tools/core/: authentication.py  duration.py  input.py
trakt_tools/models/: profile.py
trakt_tools/runner/: main.py
trakt_tools/runner/commands/: __init__.py
trakt_tools/runner/commands/account/: __init__.py  add.py  delete.py  list.py  switch.py
trakt_tools/runner/commands/history/duplicates/: merge.py  scan.py
trakt_tools/runner/commands/profile/backup/: apply.py  create.py
trakt_tools/tasks/history/duplicates/core/: formatter.py
trakt_tools/tasks/history/duplicates/merge/: executor.py  main.py
trakt_tools/tasks/history/duplicates/scan/: main.py  models.py
trakt_tools/tasks/profile/backup/apply/: main.py
trakt_tools/tasks/profile/backup/apply/handlers/: __init__.py  collection.py  history.py  ratings.py  watchlist.py
trakt_tools/tasks/profile/backup/create/: main.py
trakt_tools/tasks/profile/backup/create/handlers/: collection.py  history.py  playback.py  ratings.py  watchlist.py
