[metadata]
name = trakt-tools
summary = Command-line tools for Trakt.tv.
platform = any
author = Steffen Givard
author-email = https://github.com/SteffenGivard
description-file = README.md
home-page = https://github.com/SteffenGivard/trakt-tools
classifier =
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities
keywords =
    trakt
    trakt.tv
    tools
    utilities

[aliases]
test=pytest

[bdist_wheel]
python-tag = py3

[entry_points]
console_scripts =
    trakt_tools = trakt_tools.runner.main:main

[files]
packages =
  trakt_tools

[pbr]
skip_changelog = true

[pytest]
python_files=*_tests.py

[tool:pytest]
python_files=*_tests.py
